added a checkbox to toggle auto-labellisation for each label
